# kiro-hackathon-repo

./: .gitignore  README.md  package-lock.json
ai-pipeline/: README.md  agent_config.json  pyproject.toml  requirements.txt  test_manual.sh
ai-pipeline/data/feedback/: 1478c5b5-37d9-4a8e-85b7-05d5a4977cbf.json  1d7cc425-0908-494f-81e3-03ef881a2c1c.json  27deac62-4159-45f2-9818-c5aceccd5aba.json  320561bb-6a97-4efe-bba5-3c5817f17f5c.json  54ae7fc3-d48b-4f94-b19e-51dda8d6e36e.json  5a103ec0-7c01-4c8d-98f0-a77998764fc3.json  5e411c2c-1a60-4182-a124-bfbf366625c6.json  66492738-85e8-4806-926b-abeb7182d7a5.json  bcfba042-58a1-4354-965a-62c1576ed3e9.json  d7cebc3d-899f-4682-9f4c-0cebbb7510b7.json  ed159126-fbb2-4b94-90bf-0d699cde658a.json  ffc66029-deaa-4cb5-825b-cc5cae534692.json
ai-pipeline/plugins/: plugin_schema.json
ai-pipeline/plugins/core/: categories.json  rules.json
ai-pipeline/src/room_vision_ai/: __init__.py  agent_interface.py  api_server.py  block_model_serializer.py  category_registry.py  feedback_store.py  main.py  model_generator.py  models.py  object_detector.py  plugin_manager.py  prompt_processor.py  safety_rules.py
ai-pipeline/src/room_vision_ai/agents/: __init__.py  custom_agent.py  gemini_agent.py  ollama_agent.py
ai-pipeline/tests/: __init__.py  conftest.py  test_agents.py  test_category_registry.py  test_detect.py  test_extra.py  test_feedback_store.py  test_health.py  test_integration.py  test_model_generator.py  test_models.py  test_prompt_processor.py  test_safety_rules.py  test_serializer.py
ai_pipeline/: .env.example  README.md  (+1 more)
(+287 files in other folders)
