# Room Vision AI — AI & Asset Pipeline
# MIT License — see LICENSE in repository root

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "room-vision-ai"
version = "1.0.0"
description = "Privacy-first AI pipeline for room object detection, 3D model generation, and safety-focused manipulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Room Vision AI Contributors"}
]
keywords = ["computer-vision", "3d-modeling", "room-safety", "ai-pipeline", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "python-multipart==0.0.27",
    "pydantic==2.13.3",
    "Pillow==12.2.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
